<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">


        <TextView
            android:id="@+id/choosetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="23dp"
            android:layout_marginTop="36dp"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@drawable/top_corners"
            app:layout_constraintTop_toBottomOf="@+id/choosetext"
            tools:layout_editor_absoluteX="0dp">

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginVertical="15sp"
                android:background="@drawable/round_corners_et"
                android:drawablePadding="5dp"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:orientation="horizontal"
                android:padding="15sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:theme="@style/CustomEditText"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="20dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginVertical="15sp"
                android:background="@drawable/round_corners_et"
                android:drawablePadding="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:orientation="horizontal"
                android:padding="15sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:theme="@style/CustomEditText"
                app:layout_constraintTop_toBottomOf="@+id/userName"
                tools:layout_editor_absoluteX="20dp" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginVertical="15sp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_corners_et"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:theme="@style/CustomEditText"
                app:layout_constraintTop_toBottomOf="@+id/email"
                tools:layout_editor_absoluteX="-30dp" />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:background="#100F0F"
            android:backgroundTint="@color/green"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintVertical_bias="0.146"
            tools:layout_editor_absoluteX="16dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="279dp"
            android:layout_height="176dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signin" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>